modify build.gradle and change temporary directory for windows

--- a/Lesson03-Green-Recycler-View/T03.07-Exercise-RecyclerViewClickHandling/build.gradle
+++ b/Lesson03-Green-Recycler-View/T03.07-Exercise-RecyclerViewClickHandling/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 allprojects {
     String osName = System.getProperty("os.name").toLowerCase();
     if (osName.contains("windows")) {
-        buildDir = "C:/tmp/${rootProject.name}/${project.name}"
+        buildDir = "C:/Users/t40003/Documents/CS/Dev/Android/tmp/${rootProject.name}/${project.name}"
     }
     repositories {
         jcenter()
